# routes/AI/aiUsageRoute.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { authenticateToken } from "../../middlewares/authMiddleware.js";
+import { authenticateToken, verifyAdmin } from "../../middlewares/authMiddleware.js";
 import { userUsage, allUsage } from "../../controllers/AI/aiUsageController.js";
 
 const router = express.Router();
@@ -7,6 +7,6 @@ const router = express.Router();
 router.get("/me", authenticateToken, userUsage); // User's own stats
 
 // Developing admin side: For admin middleware
-// router.get("/all", authenticateToken, verifyAdmin, allUsage);
+router.get("/all", authenticateToken, verifyAdmin, allUsage);
 
 export default router;
